# GenesVisual

./: .gitignore  CMakeLists.txt  README.md  dependencies
src/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/container/: datasetcontainer.cpp  datasetcontainer.hpp  embeddingcontainer.cpp  embeddingcontainer.hpp  h5container.cpp  h5container.hpp  spatialcontainer.cpp  spatialcontainer.hpp
src/graph/: graphdensity.cpp  graphdensity.hpp  graphprojection.cpp  graphprojection.hpp  graphspatial.cpp  graphspatial.hpp
src/utils/: colorpalette.cpp  colorpalette.hpp
